--- a/index.html
+++ b/index.html
@@ -22,7 +22,16 @@
     </ul>
   </nav>
   <!-- Hero section -->
-
+  <div class="hero">
+    <h1>
+      Hello! <br />
+      I'm Mary Jane
+    </h1>
+    <p>A web developer</p>
+    <a href="mailto:mary@jane.com">
+      <button>Contact Me</button>
+    </a>
+  </div>
   <!-- Coding journey section -->
 
   <!-- Footer section -->
