--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
   <div class="hero">
     <h1>
       Hello! <br />
-      I'm Mary Jane
+      I'm Kelly
     </h1>
     <p>A web developer</p>
-    <a href="mailto:mary@jane.com">
+    <a href="irakozekelly41@gmail.com">
       <button>Contact Me</button>
     </a>
   </div>
