--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
   </div>
 
   <!-- Footer section -->
+  <footer>
+    <p>Website Made By Mary Jane</p>
+  </footer>
 
   <script src="./script.js"></script>
 </body>
