--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <!-- Footer section -->
   <footer>
-    <p>Website Made By Mary Jane</p>
+    <p>Website Made By Kelly</p>
   </footer>
 
   <script src="./script.js"></script>
