--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Learn - Get Started Today</title>
   <meta name="description" content="Learn is a platform that offers free courses for everyone. Start learning today!" />
   <!-- CSS -->
-  <link rel="stylesheet" href="./css/main.css" />
+  <link rel="stylesheet" href="./main.css" />
 </head>
 
 <body>
