--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       I'm Kelly
     </h1>
     <p>A web developer</p>
-    <a href="irakozekelly41@gmail.com">
+    <a href="mailto:irakozekelly41@gmail.com">
       <button>Contact Me</button>
     </a>
   </div>
