--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   </div>
   <!--About me-->
   <div class="about">
-    <div class="headabout"> About me </div>
-    <div class="bodyabout"> I’m a passionate web developer dedicated to creating engaging and user-friendly websites. From the moment I started coding, I knew I wanted to build digital experiences that people love to use. I thrive on turning creative ideas into functional websites that make a difference. </div>
+    <div class="headabout"> <h1> About me </h1> </div>
+    <div class="bodyabout"> <p> I’m a passionate web developer dedicated to creating engaging and user-friendly websites. From the moment I started coding, I knew I wanted to build digital experiences that people love to use. I thrive on turning creative ideas into functional websites that make a difference. </p> </div>
   </div>
   <!-- Coding journey section -->
   <div id="coding-journey" class="journey">
