--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!--About me-->
   <div class="about">
     <div class="headabout"> <h1> About me </h1> </div>
-    <div class="bodyabout"> <p> I’m a passionate web developer dedicated to creating engaging and user-friendly websites. From the moment I started coding, I knew I wanted to build digital experiences that people love to use. I thrive on turning creative ideas into functional websites that make a difference. </p> </div>
+    <div class="bodyabout"> <p> I’m a passionate web developer dedicated to creating engaging and user-friendly websites. From the <br /> I started coding, I knew I wanted to build digital experiences that people love to use. I thrive on <br /> creative ideas into functional websites that make a difference. </p> </div>
   </div>
   <!-- Coding journey section -->
   <div id="coding-journey" class="journey">
@@ -77,6 +77,15 @@
       </div>
     </div>
   </div>
+
+  <!--Goals-->
+
+  <div class="goals">
+  <div class="headgoals">My Goals</div>
+  <div class="bodygoals">I aspire to mentor and support other aspiring developers, sharing the knowledge and experience I’ve <br /> gained along the way. By fostering a collaborative and encouraging environment, I hope to help others <br /> achieve their own goals and grow in their careers. Building strong, supportive communities is important <br /> to me, as I believe we can achieve more together.</div>
+  </div>
+
+  
 
   <!-- Footer section -->
   <footer>
