--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <!--Goals-->
 
   <div class="goals">
-  <div class="headgoals">My Goals</div>
+  <div class="headgoals"><h1>My Goals</h1></div>
   <div class="bodygoals">I aspire to mentor and support other aspiring developers, sharing the knowledge and experience I’ve <br /> gained along the way. By fostering a collaborative and encouraging environment, I hope to help others <br /> achieve their own goals and grow in their careers. Building strong, supportive communities is important <br /> to me, as I believe we can achieve more together.</div>
   </div>
 
