--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <img src="./images/logo.png" width="300" />
     </div>
     <ul class="navbar-items">
-      <li>About Me</li>
-      <li>Journey</li>
-      <li>Goals</li>
+      <li><a href="#about-section">About Me</a></li>
+      <li><a href="#journey-section">Journey</a></li>
+      <li><a href="#goals-section">Goals</a></li>
     </ul>
   </nav>
   <!-- Hero section -->
@@ -33,12 +33,12 @@
     </a>
   </div>
   <!--About me-->
-  <div class="about">
+  <div id="about-section" class="about">
     <div class="headabout"> <h1> About me </h1> </div>
-    <div class="bodyabout"> <p> I’m a passionate web developer dedicated to creating engaging and user-friendly websites. From the <br /> I started coding, I knew I wanted to build digital experiences that people love to use. I thrive on <br /> creative ideas into functional websites that make a difference. </p> </div>
+    <div class="bodyabout"> <p> I'm a passionate web developer dedicated to creating engaging and user-friendly websites. From the <br /> I started coding, I knew I wanted to build digital experiences that people love to use. I thrive on <br /> creative ideas into functional websites that make a difference. </p> </div>
   </div>
   <!-- Coding journey section -->
-  <div id="coding-journey" class="journey">
+  <div id="journey-section" class="journey">
     <h2>Coding Journey</h2>
   
     <div class="journey-list">
@@ -80,16 +80,16 @@
 
   <!--Goals-->
 
-  <div class="goals">
+  <div id="goals-section" class="goals">
   <div class="headgoals"><h1>My Goals</h1></div>
-  <div class="bodygoals">I aspire to mentor and support other aspiring developers, sharing the knowledge and experience I’ve <br /> gained along the way. By fostering a collaborative and encouraging environment, I hope to help others <br /> achieve their own goals and grow in their careers. Building strong, supportive communities is important <br /> to me, as I believe we can achieve more together.</div>
+  <div class="bodygoals">I aspire to mentor and support other aspiring developers, sharing the knowledge and experience I've <br /> gained along the way. By fostering a collaborative and encouraging environment, I hope to help others <br /> achieve their own goals and grow in their careers. Building strong, supportive communities is important <br /> to me, as I believe we can achieve more together.</div>
   </div>
 
   
 
   <!-- Footer section -->
   <footer>
-    <p>Website Made By Kelly</p>
+    <p>Website Made With ❤️ From Kigali © <span id="current-year"></span></p>
   </footer>
 
   <script src="./script.js"></script>
